src/test/ui/parser/attrs-after-extern-mod.stderr
error: expected item after attributes
  --> $DIR/attrs-after-extern-mod.rs:10:19
   |
LL |     #[cfg(stage37)] //~ ERROR expected item after attributes
   |                   ^

error: aborting due to previous error

